# buster

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  build.bat  build.c  build.env  build.ps1  build.sh  generate.py  imhex.hexproj  lsan.supp  preamble.c  preamble.cpp  run.py  setup_ci.bat  setup_ci.c  setup_ci.sh
.gemini/: settings.json
.github/workflows/: ci.sh  ci.yml
src/: disk_builder.c  entry_point.c  entry_point.h  lib.c  lib.h  main.c  system_headers.h
src/buster/: aarch64.c  aarch64.cpp  aarch64.h  arena.c  arena.cpp  arena.h  arguments.c  arguments.cpp  arguments.h  assertion.c  assertion.cpp  assertion.h  base.h  disk_builder.c  disk_builder.cpp  entry_point.c  entry_point.cpp  entry_point.h  file.c  file.cpp  file.h  float.cpp  float.h  font_provider.c  font_provider.cpp  font_provider.h  format.h  integer.c  integer.cpp  integer.h  lib.c  lib.h  memory.c  memory.cpp  memory.h  os.c  os.cpp  os.h  path.c  path.cpp  (+44 more)
src/buster/compiler/: intern_table.cpp  intern_table.h
src/buster/compiler/backend/: code_generation.c  code_generation.cpp  code_generation.h  instruction_selection.cpp  instruction_selection.h
src/buster/compiler/frontend/asm/: asm_main.c  asm_main.cpp
src/buster/compiler/frontend/buster/: analysis.cpp  analysis.h  parser.cpp  parser.h
src/buster/compiler/frontend/cc/: cc_main.c  cc_main.cpp
src/buster/compiler/ir/: ir.c  ir.cpp  ir.h
src/buster/compiler/link/: elf.c  elf.cpp  elf.h  jit.c  jit.cpp  jit.h  link.c  link.h
src/buster/ide/: ide.cpp
src/buster/os/: .gitignore  CMakeLists.txt  generate.py  main.c
src/buster/shaders/: rect.frag  rect.inc  rect.metal  rect.vert
src/buster/toy_gui/: toy_gui.c
src/compiler/frontend/asm/: asm_main.c
src/compiler/frontend/cc/: cc_main.c
src/martins/: md5.h
src/os/: CMakeLists.txt  build.py  main.c  run.py
src/stb/: stb_truetype.h
tests/: array_slices.bbb  assembly.S  basic.bbb  basic_add.bbb  basic_binary.bbb  basic_hexadecimal.bbb  basic_octal.bbb  basic_sum.bbb  if_else.bbb
